--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:h2:mem:petclinic
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:h2/schema.sql
+spring.sql.init.data-locations=classpath*:h2/data.sql
