--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.example'
@@ -34,4 +35,16 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jib {
+	from {
+		image = 'mcr.microsoft.com/openjdk/jdk:17-ubuntu'
+	}
+	to {
+		image = 'ghcr.io/matarillo/petclinic-backend-easyauth:latest'
+	}
+	container {
+		jvmFlags = ['-Dserver.port=80']
+	}
 }
