--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^3.5.0"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^1.1.6",
     "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
